# PackageViewer

./: .gitignore  .pre-commit-config.yaml  README.md  a.py  app.py  b.py  c.py  config.example.yml  config.yml  d.py  data_downloader_cli.py  data_manager.py  data_manager_cli.py  database.py  e.py  f.py  g.py  gen_csv_cli.py  h.py  i.py  import_csv_sqlite_cli.py  main.py  manage_archive_data_cli.py  manage_data_cli.py  path.csv  process_data_ci.py  pyproject.toml  requirements.txt  reset_db.py  test.py  timer.py  utils.py
.github/workflows/: ci.yml
packageparse/: data_manager.py  data_parser.py  database.py  distro_data.py  sql_table.py
packageparse/data_outputs/: csv_output.py
packageparse/inserters/: apt_inserter.py
packageparse/parsers/: apt_parser.py  dnf_parser.py
packageparse/processors/: apt_processor.py
packageviewer/: data_downloader.py  data_manager.py  sql_table.py  utils.py
packageviewer/db/: data_downloader.py  data_manager.py  data_querier.py  sql_table.py  utils.py
packageviewer/db/inserters/: apt_inserter.py  dnf_inserter.py  inserter.py  pacman_inserter.py
packageviewer/db/parsers/: apt_parser.py  dnf_parser.py  pacman_parser.py
packageviewer/db/processors/: apt_processor.py  (+2 more)
packageviewer/inserters/: apt_inserter.py  dnf_inserter.py  inserter.py  pacman_inserter.py
packageviewer/parsers/: apt_parser.py  dnf_parser.py  pacman_parser.py
packageviewer/processors/: apt_processor.py  dnf_processor.py  pacman_processor.py
packageviewer/website/: app.py  bp_api.py  bp_static.py
parsers/: apt_parser.py  pacman_parser.py
