[project]
name = "packageviewer"
version = "0.1.0"
description = ""
authors = [
    {name = "iTrooz",email = "hey@itrooz.fr"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    'rpm-vercmp (>=0.1.2,<0.2.0)',
    'pyyaml (>=6.0.2,<7.0.0)',
    'aiohttp (>=3.11.11,<4.0.0)',
    'aiofiles (>=24.1.0,<25.0.0)',
    'tqdm (>=4.67.1,<5.0.0)',
    "python-debian (>=0.1.49,<0.2.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
